Pre-Javascript update

--- a/donations.html
+++ b/donations.html
@@ -4,7 +4,11 @@
 			<title>Cheng Foundation Donations</title>
 			<link href="styles/main.css" rel="stylesheet">
 			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">	
+			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+			<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+			<link href="https://fonts.googleapis.com/css?family=Lato|PT+Serif" rel="stylesheet">
+			<link href="https://fonts.googleapis.com/css?family=Pinyon+Script" rel="stylesheet">
+			<script src="https://use.fontawesome.com/ebaf6b7b9f.js"></script>
 	</head>
 	<body>
 		<header>
@@ -34,11 +38,30 @@
 					        <li><a href="ourwork.html">Our Work</a></li>
 					        <li><a href="properties.html">Properties</a></li>
 					        <li class="active"><a href="donations.html">Donations</a></li>
-					        <li><a href="socialmedia.html">Social Media</a></li>
 					        <li><a href="testimonials.html">Testimonials</a></li>
 					      </ul>
 					      <!-- Right aligned links -->
 					      <ul class="nav navbar-nav navbar-right">
+						    <li>
+					        	<a class="btn btn-social-icon btn-facebook btn-lg" href="https://facebook.com">
+		   							<span class="fa fa-facebook"></span>
+		  						</a>
+		  					</li>
+		  					<li>
+					        	<a class="btn btn-social-icon btn-twitter btn-lg" href="https://twitter.com">
+		   							<span class="fa fa-twitter"></span>
+		  						</a>
+		  					</li>
+		  					<li>
+					        	<a class="btn btn-social-icon btn-instagram btn-lg" href="https://www.instagram.com/b_ryce_cheng/">
+		   							<span class="fa fa-instagram"></span>
+		  						</a>
+		  					</li>
+		  					<li>
+					        	<a class="btn btn-social-icon btn-google btn-lg" href="https://plus.google.com/111061049653291785131">
+		  							<span class="fa fa-google"></span>
+		  						</a>
+		  					</li>
 					        <li><a href="contactus.html">Contact Us</a></li>
 					      </ul>
 					    </div><!-- /.navbar-collapse -->
@@ -46,59 +69,65 @@
 					</nav>
 				</div>
 			</header>
-		<h1 class ="imp_text">The Cheng Foundation does not guarantee acceptance to all donation applicants <h1>
-		<p class="cent_text fine_print">Donation applications are extremely competitive and will be processed on a case by case basis.</p>
-		<p class="cent_text fine_print"> Fill out the questions below in order to receive additional information about the application process</p>
-		<div class="container">
-			<div class="input-group sep_group">
-				  <span class="input-group-addon" id="basic-addon1">First Name</span>
-				  <input type="text" class="form-control" placeholder="" aria-describedby="First Name">
-			</div>
-			<div class="input-group low_group">
-				<span class="input-group-addon" id="basic-addon2">Last Name</span>
-				<input type="text" class="form-control" placeholder="" aria-describedby="Last Name">
-			</div>
-			<div class="input-group low_group">
-			  <span class="input-group-addon">Email Address</span>
-			  <input type="text" class="form-control" aria-label="Email">
-			</div>
-			<div class="input-group low_group">
-				<span class="input-group-addon">Yearly Income (in $)</span>
-				<input type="text" class="form-control" aria-label="Yearly income">
-			</div>
-			<div class="input-group low_group">
-				<span class="input-group-addon">Full Social Security Number</span>
-				<input type="text" class="form-control" aria-label="Yearly income">
-			</div>
-			<div class="input-group low_group">
-				<span class="input-group-addon">Credit Card Number</span>
-				<input type="text" class="form-control" aria-label="Yearly income">
-			</div>
-			<div class = "cent_text buf_top">
-				<p><a class="btn btn-success btn-lg" href="index.html" role="button">Submit</a></p>
+		<div class="container lightgray col-lg-8 col-lg-offset-2">
+
+			<h1 class="imp_text cent_text pg_head">  <strong>Donations</strong> </h1>
+			<h4 class ="cent_text">The Cheng Foundation does not guarantee acceptance to all <strong>donation applicants. </strong> <h4>
+			<p class="cent_text fine_print"> Answer <strong>all</strong> of the questions below to receive additional information on the Cheng Grant application process.</p>
+			<div class="container">
+				<div class="input-group sep_group">
+					  <span class="input-group-addon" id="basic-addon1">Full Name</span>
+					  <input type="text" class="form-control" placeholder="" aria-describedby="First Name">
+				</div>
+				<div class="input-group low_group">
+					<span class="input-group-addon" id="basic-addon2">Favorite Cheng Family Member</span>
+					<input type="text" class="form-control" placeholder="" aria-describedby="Favorite">
+					<span class="input-group-addon" id="basic-addon2">Cheng</span>
+				</div>
+				<div class="cent_text form-group low_group">
+					<textarea class="form-control" placeholder="In 150 words or less, defend you answer to the previous question" rows="5" id="comment"></textarea>
+				</div>
+				<div class="input-group low_group">
+				  <span class="input-group-addon">Email Address</span>
+				  <input type="text" class="form-control" aria-label="Email">
+				  <span class="input-group-addon" id="basic-addon2">@chengfoundation.us</span>
+				</div>
+				<div class="input-group low_group">
+					<span class="input-group-addon">Date of Projected Death</span>
+					<input type="text" class="form-control" aria-label="DOD">
+				</div>
+				<div class="input-group low_group">
+					<span class="input-group-addon">Horoscope</span>
+					<input type="text" class="form-control" aria-label="Horoscope">
+				</div>
+				<div class="input-group low_group">
+					<span class="input-group-addon">Yearly Income (in $)</span>
+					<input type="text" class="form-control" aria-label="Yearly income">
+				</div>
+				<div class="input-group low_group">
+					<span class="input-group-addon">Full Social Security Number</span>
+					<input type="text" class="form-control" aria-label="Yearly income">
+				</div>
+				<div class="input-group low_group">
+					<span class="input-group-addon">Bank Account Password</span>
+					<input type="text" class="form-control" aria-label="Yearly income">
+				</div>
+				<div class="cent_text form-group low_group">
+					<textarea class="form-control" placeholder="In 250 words or less, explain why you are worthy of receiving a Cheng Grant." rows="10" id="comment"></textarea>
+				</div>
+				<div class="cent_text form-group low_group">
+					<textarea class="form-control" placeholder="Which Cheng do you worship: Bryce or Darrell? Why?" rows="5" id="comment"></textarea>
+				</div>
+				<div class = "cent_text buf_top">
+					<p><a class="btn btn-success btn-lg" href="index.html" role="button">Submit</a></p>
+				</div>
 			</div>
 		</div>
-
-		<footer class="page-footer">
-		    <!--Footer Links-->
-		    <div class="container-fluid">
-		        <div class="row">
-		            <!--First column-->
-		            <div class="col-md-12 act_foot">
-		                <h5 class="title cent_text">Cheng Foundation</h5>
-		            </div>
-		        </div>
-		    </div>
-		    <!--/.Footer Links-->
-		    <!--Copyright-->
-		    <div class="footer-copyright">
-		        <div class="container-fluid act_foot cent_text">
-		        	<h5>2015 Copyright: <a href="https://www.chengfoundation.us"> ChengFoundation.us</a></h5>
-		        </div>
-		        
-		    </div>
-		    <!--/.Copyright-->
-		</footer>
+		<footer class="footer">
+			<div class="container">
+				<h5 class="cent_text no_pad">Created by Pranav Sriram | The Cheng Foundation Copyright 2017: <a href="https://www.chengfoundation.us"> ChengFoundation.us </a></h5>
+			</div> 
+		</footer>		
 	</body>
 	<script src = "https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
