--- a/ourwork.html
+++ b/ourwork.html
@@ -5,6 +5,10 @@
 			<link href="styles/main.css" rel="stylesheet">
 			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+			<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+			<link href="https://fonts.googleapis.com/css?family=Lato|PT+Serif" rel="stylesheet">
+			<link href="https://fonts.googleapis.com/css?family=Pinyon+Script" rel="stylesheet">
+			<script src="https://use.fontawesome.com/ebaf6b7b9f.js"></script>
 	</head>
 	<body>
 		<header>
@@ -34,11 +38,30 @@
 					        <li class = "active"><a href="ourwork.html">Our Work</a></li>
 					        <li><a href="properties.html">Properties</a></li>
 					        <li><a href="donations.html">Donations</a></li>
-					        <li><a href="socialmedia.html">Social Media</a></li>
 					        <li><a href="testimonials.html">Testimonials</a></li>
 					      </ul>
 					      <!-- Right aligned links -->
 					      <ul class="nav navbar-nav navbar-right">
+						    <li>
+					        	<a class="btn btn-social-icon btn-facebook btn-lg" href="https://facebook.com">
+		   							<span class="fa fa-facebook"></span>
+		  						</a>
+		  					</li>
+		  					<li>
+					        	<a class="btn btn-social-icon btn-twitter btn-lg" href="https://twitter.com">
+		   							<span class="fa fa-twitter"></span>
+		  						</a>
+		  					</li>
+		  					<li>
+					        	<a class="btn btn-social-icon btn-instagram btn-lg" href="https://www.instagram.com/b_ryce_cheng/">
+		   							<span class="fa fa-instagram"></span>
+		  						</a>
+		  					</li>
+		  					<li>
+					        	<a class="btn btn-social-icon btn-google btn-lg" href="https://plus.google.com/111061049653291785131">
+		  							<span class="fa fa-google"></span>
+		  						</a>
+		  					</li>
 					        <li><a href="contactus.html">Contact Us</a></li>
 					      </ul>
 					    </div><!-- /.navbar-collapse -->
@@ -46,62 +69,49 @@
 					</nav>
 				</div>
 		</header>
-		<p class="cent_text big_print">Here is some in-depth information about our various projects here at the Cheng Foundation</p> 
+		<h1 class="imp_text cent_text pg_head"><strong>Our Work</strong></h1>
+		<h4 class="cent_text">Here's some in-depth information about our various projects here at the Cheng Foundation.</h4> 
 		<div class="container">
-			<div class="jumbotron">
+			<div class="jumbotron grey_jumbotron">
 			 	<h1 class="imp_text">The CII Project</h1>
 			  	<p>The CII Project is the newest Cheng Foundation venture, through which the foundation strives to encourage cultural awareness.</p>
 			  	<div class = "cent_text">
-			  		<p><a class="btn btn-primary btn-lg" href="ourwork.html" role="button">Join the CII Project</a></p>
+			  		<p><a class="btn btn-primary btn-lg" href="https://kb.construction-institute.org/" role="button">Join the CII Project</a></p>
 			  	</div>
 			</div>
 		</div>
 		<div class="container">
-			<div class="jumbotron">
+			<div class="jumbotron grey_jumbotron">
 			 	<h1 class="imp_text">The Shaw Trust</h1>
-			  	<p>The Shaw Trust is dedicated towards improving the lives of Carmel High School students. A current project 
-			  	is developing a helicophter pad of Carmel High School.</p>
+			  	<p>The Shaw Trust is dedicated towards improving the lives of Carmel High School students. Currently, the  
+			  	Trust is focused on funding the development of helicophter pads on top of local high schools.</p>
 			  	<div class = "cent_text">
-			  		<p><a class="btn btn-primary btn-lg" href="ourwork.html" role="button">Learn More</a></p>
+			  		<p><a class="btn btn-primary btn-lg" href="https://www.shaw-trust.org.uk/" role="button">Get involved with the Shaw Trust</a></p>
 			  	</div>
 			</div>
 		</div>
 		<div class="container">
-			<div class="jumbotron">
+			<div class="jumbotron grey_jumbotron">
 			 	<h1 class="imp_text">The Madduri Partnership</h1>
-			  	<p>A partnership will fellow billionaire Sathvik Madduri to find the rarest cards in existence.</p>
+			  	<p>A partnership with fellow billionaire Sathvik Madduri to find the rarest artificats in existence. The partnership is responsible for the discovery of the Rosetta Stone and a multitude of other ancient works.</p>
 			  	<div class = "cent_text">
-			  		<p><a class="btn btn-primary btn-lg" href="ourwork.html" role="button">Learn More</a></p>
+			  		<p><a class="btn btn-primary btn-lg" href="http://events.pennwell.com/dtech2017/public/SpeakerDetails.aspx?FromPage=Speakers.aspx&ContactID=73566" role="button">Learn more about the partnership</a></p>
 			  	</div>
 			</div>
 		</div>
 		<div class="container">
-			<div class="jumbotron">
-			 	<h1 class="imp_text">The Communist Fund</h1>
-			  	<p>A fund dedicated to kickstart the revolution and overthrow the bourgeoise.</p>
+			<div class="jumbotron grey_jumbotron">
+			 	<h1 class="imp_text">The Cheng Grant Organization</h1>
+			  	<p>An organization providing financial grants to low-income students (annual incomes less than  $100 million) in our local communities </p>
 			  	<div class = "cent_text">
-			  		<p><a class="btn btn-primary btn-lg" href="ourwork.html" role="button">Learn More</a></p>
+			  		<p><a class="btn btn-primary btn-lg" href="donations.html" role="button">Apply for a Cheng Grant</a></p>
 			  	</div>
 			</div>
 		</div>
-		<footer class="page-footer">
-		    <!--Footer Links-->
-		    <div class="container-fluid">
-		        <div class="row">
-		            <!--First column-->
-		            <div class="col-md-12 act_foot">
-		                <h5 class="title cent_text">Cheng Foundation</h5>
-		            </div>
-		        </div>
-		    </div>
-		    <!--/.Footer Links-->
-		    <!--Copyright-->
-		    <div class="footer-copyright">
-		        <div class="container-fluid act_foot cent_text">
-		            2015 Copyright: <a href="https://www.chengfoundation.us"> ChengFoundation.us </a>
-		        </div>
-		    </div>
-		    <!--/.Copyright-->
+		<footer class="footer">
+			<div class="container">
+				<h5 class="cent_text no_pad">Created by Pranav Sriram | The Cheng Foundation Copyright 2017: <a href="https://www.chengfoundation.us"> ChengFoundation.us </a></h5>
+			</div> 
 		</footer>
 
 		<!--Other jumbotron for projects, Communist Fund, Madduri Partnership, Shaw Trust -->
