--- a/socialmedia.html
+++ b/socialmedia.html
@@ -52,7 +52,7 @@
 			<span class="fa fa-twitter"></span> Sign in with Twitter
   		</a> -->
   		
-  		<p class="cent_text big_print">Catch the latest Cheng Foundation news through our numerous social media channels*</p>  
+  		<p class="cent_text big_print">Catch the latest Cheng Foundation news through our numerous social media channels</p>  
   		<div class="cent_text">
   			<a class="btn btn-social-icon btn-facebook btn-lg" href="https://facebook.com">
 	   				<span class="fa fa-facebook"></span>
@@ -67,26 +67,13 @@
 	  				<span class="fa fa-google"></span>
 	  		</a>
   		</div>
-  		<p class="cent_text big_print">YOU MUST FOLLOW US ON ALL OF OUR SOCIAL MEDIA OUTLETS TO BE ELIGIBLE FOR A DONATION</p>
-  		<p class ="cent_text">*We do NOT buy followers, we do NOT use any apps to inflate our social media figures</p>
-	<footer class="page-footer">
-		    <!--Footer Links-->
-		    <div class="container-fluid">
-		        <div class="row">
-		            <!--First column-->
-		            <div class="col-md-12 act_foot">
-		                <h5 class="title cent_text">Cheng Foundation</h5>
-		            </div>
-		        </div>
-		    </div>
-		    <!--/.Footer Links-->
-		    <!--Copyright-->
+  		<p class ="cent_text pad_top">Disclaimer: You must follow us on all of our social media outlets to be eligible for a donation. We do NOT buy followers, we do NOT use any apps to inflate our social media figures</p>
+		<footer class="page-footer social_med_f_space">
 		    <div class="footer-copyright">
-		        <div class="container-fluid act_foot cent_text">
-		            2015 Copyright: <a href="https://www.chengfoundation.us"> ChengFoundation.us </a>
+		        <div class="container-fluid act_foot cent_text foot_col">
+		            <h5 class="cent_text no_pad">The Cheng Foundation Copyright 2017: <a href="https://www.chengfoundation.us"> ChengFoundation.us </a></h5>
 		        </div>
 		    </div>
-		    <!--/.Copyright-->
 		</footer>
 	</body>
 	<script src = "https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
