--- a/testimonials.html
+++ b/testimonials.html
@@ -5,6 +5,10 @@
 			<link href="styles/main.css" rel="stylesheet">
 			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+			<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+			<link href="https://fonts.googleapis.com/css?family=Lato|PT+Serif" rel="stylesheet">
+			<link href="https://fonts.googleapis.com/css?family=Pinyon+Script" rel="stylesheet">
+			<script src="https://use.fontawesome.com/ebaf6b7b9f.js"></script>
 	</head>
 	<body>
 		<header>
@@ -34,11 +38,30 @@
 					        <li><a href="ourwork.html">Our Work</a></li>
 					        <li><a href="properties.html">Properties</a></li>
 					        <li><a href="donations.html">Donations</a></li>
-					        <li><a href="socialmedia.html">Social Media</a></li>
 					        <li class="active"><a href="testimonials.html">Testimonials</a></li>
 					      </ul>
 					      <!-- Right aligned links -->
 					      <ul class="nav navbar-nav navbar-right">
+						    <li>
+					        	<a class="btn btn-social-icon btn-facebook btn-lg" href="https://facebook.com">
+		   							<span class="fa fa-facebook"></span>
+		  						</a>
+		  					</li>
+		  					<li>
+					        	<a class="btn btn-social-icon btn-twitter btn-lg" href="https://twitter.com">
+		   							<span class="fa fa-twitter"></span>
+		  						</a>
+		  					</li>
+		  					<li>
+					        	<a class="btn btn-social-icon btn-instagram btn-lg" href="https://www.instagram.com/b_ryce_cheng/">
+		   							<span class="fa fa-instagram"></span>
+		  						</a>
+		  					</li>
+		  					<li>
+					        	<a class="btn btn-social-icon btn-google btn-lg" href="https://plus.google.com/111061049653291785131">
+		  							<span class="fa fa-google"></span>
+		  						</a>
+		  					</li>
 					        <li><a href="contactus.html">Contact Us</a></li>
 					      </ul>
 					    </div><!-- /.navbar-collapse -->
@@ -46,25 +69,50 @@
 					</nav>
 				</div>
 		</header>
-
-		<footer class="page-footer">
-		    <!--Footer Links-->
-		    <div class="container-fluid">
-		        <div class="row">
-		            <!--First column-->
-		            <div class="col-md-12 act_foot">
-		                <h5 class="title cent_text">Cheng Foundation</h5>
-		            </div>
-		        </div>
-		    </div>
-		    <!--/.Footer Links-->
-		    <!--Copyright-->
-		    <div class="footer-copyright">
-		        <div class="container-fluid act_foot cent_text">
-		            2015 Copyright: <a href="https://www.chengfoundation.us"> ChengFoundation.us </a>
-		        </div>
-		    </div>
-		    <!--/.Copyright-->
+		<h1 class="imp_text cent_text pg_head"><strong>Testimonials</strong></h1>
+		<h4 class="cent_text">Here are some anonymous scrambled responses from a few of our satisfied clients.</h4>
+		<!-- <div class="test_holder"> -->
+			<div class="panel panel-default col-lg-6 col-lg-offset-3">
+				<div class="panel-heading">
+					<h3 class="panel-title cent_text">Warry Bei</h3>
+				</div>
+				<div class="panel-body">
+					<!-- <img class="testimonial_img img-responsive center-block" src=images/Barry.JPG alt="Barry"> -->
+					<p class="imp_text big_print ">"The Cheng Grant Organization was responsible for changing my life through allowing me to leave my home and form my own crippling impoverished community."</p>
+				</div>
+			</div>
+			<div class="panel panel-default col-lg-6 col-lg-offset-3">
+				<div class="panel-heading">
+					<h3 class="panel-title cent_text">Cevin Khen</h3>
+				</div>
+				<div class="panel-body">
+					<!-- <img class="testimonial_img img-responsive center-block" src=images/Kevin_Hori.JPG alt="Kevin"> -->
+					<p class="imp_text big_print ">"The Cheng Foundation ruined my life. Because of the Cheng Food Aid Program, I now live in a cardboard box shack."</p>
+				</div>
+			</div>
+			<div class="panel panel-default col-lg-6 col-lg-offset-3">
+				<div class="panel-heading">
+					<h3 class="panel-title cent_text">Zllen Aheng</h3>
+				</div>
+				<div class="panel-body">
+					<!-- <img class="testimonial_img img-responsive center-block" src=images/Zheng_Vert2.JPG alt="Allen"> -->
+					<p class="imp_text big_print">"The Cheng Foundation helped me get into Bone Pit and accomplish my various Clash Royale goals through their grant program."</p>
+				</div>
+			</div>			
+			<div class="panel panel-default col-lg-6 col-lg-offset-3">
+				<div class="panel-heading">
+					<h3 class="panel-title cent_text">Laniel Dee</h3>
+				</div>
+				<div class="panel-body">
+					<!-- <img class="testimonial_img img-responsive center-block" src=images/Zheng_Vert2.JPG alt="Allen"> -->
+					<p class="imp_text big_print">"Mem."</p>
+				</div>
+			</div>	
+		<!-- </div> -->
+		<footer class="footer">
+			<div class="container">
+				<h5 class="cent_text no_pad">Created by Pranav Sriram | The Cheng Foundation Copyright 2017: <a href="https://www.chengfoundation.us"> ChengFoundation.us </a></h5>
+			</div> 
 		</footer>
 	</body>
 	<script src = "https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
