--- a/aboutus.html
+++ b/aboutus.html
@@ -5,6 +5,10 @@
 		<link href="styles/main.css" rel="stylesheet">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+		<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Lato|PT+Serif" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Pinyon+Script" rel="stylesheet">
+		<script src="https://use.fontawesome.com/ebaf6b7b9f.js"></script>
 	</head>
 	<body>
 		<header>
@@ -34,33 +38,52 @@
 					        <li><a href="ourwork.html">Our Work</a></li>
 					        <li><a href="properties.html">Properties</a></li>
 					        <li><a href="donations.html">Donations</a></li>
-					        <li><a href="socialmedia.html">Social Media</a></li>
 					        <li><a href="testimonials.html">Testimonials</a></li>
 					      </ul>
 					      <!-- Right aligned links -->
 					      <ul class="nav navbar-nav navbar-right">
+						    <li>
+					        	<a class="btn btn-social-icon btn-facebook btn-lg" href="https://facebook.com">
+		   							<span class="fa fa-facebook"></span>
+		  						</a>
+		  					</li>
+		  					<li>
+					        	<a class="btn btn-social-icon btn-twitter btn-lg" href="https://twitter.com">
+		   							<span class="fa fa-twitter"></span>
+		  						</a>
+		  					</li>
+		  					<li>
+					        	<a class="btn btn-social-icon btn-instagram btn-lg" href="https://www.instagram.com/b_ryce_cheng/">
+		   							<span class="fa fa-instagram"></span>
+		  						</a>
+		  					</li>
+		  					<li>
+					        	<a class="btn btn-social-icon btn-google btn-lg" href="https://plus.google.com/111061049653291785131">
+		  							<span class="fa fa-google"></span>
+		  						</a>
+		  					</li>
 					        <li><a href="contactus.html">Contact Us</a></li>
 					      </ul>
 					    </div><!-- /.navbar-collapse -->
 					  </div><!-- /.container-fluid -->
 					</nav>
 				</div>
-			</header>
-		<p class="cent_text"> The Cheng Foundation is run by both <strong>Bryce</strong> and <strong>Darrell</strong> Cheng, the foundation presidents. Brief descriptions of each co-president are available below.</p> 
+		</header>
+		<h1 class="imp_text cent_text pg_head"><strong>About Us</strong></h1>
+		<h4 class="cent_text"> The Cheng Foundation is run by both <strong>Bryce</strong> and <strong>Darrell</strong> Cheng, the foundation presidents. Brief descriptions of each co-president are available below.</h4> 
 		<div class="panel panel-default col-lg-8 col-lg-offset-2">
 			<div class="panel-heading">
 		  		<h3 class = "panel-title cent_text">Bryce Cheng</h3>
 		 	</div>
 			<div class="panel-body">
 		    	<img class="img-responsive center-block" src = "images/Bry_Close_Hori.jpg">
-		  		<p class = "cent_text">CAPTION</p>
 		  		<p class = "cent_text big_print"><strong>Childhood</strong></p> 
 				<p>At an early age, Bryce Cheng was tasked with the heavy burden of upholding the prestigious
 				Cheng Family Legacy. As the oldest of the "twin dragons,"" Bryce was tasked with "making the Cheng
 				Family great again" in the then foreign continent of North America. Alongside his younger brother,
 				Darrell, Bryce underwent integrated training in University of Washington Academy for Young Scholars to
 				acquire the skills that are necessary to survive in the brutal and capitalist world of the United States.</p>
-				<p class = "cent_text big_print"><strong>Rise to Greatness</strong></p> 
+				<p class = "cent_text big_print"><strong>Rice to Greatness</strong></p> 
 				<p>After receiving a "miniscule" loan of two-million dollars from their family fortune,
 
 				Bryce established a strong foothold in the American economy by investing in construction through his
@@ -94,24 +117,21 @@
 		    	<h3 class="panel-title cent_text">Darrell Cheng</h3>
 		 	</div>
 		 	<div class="panel-body">
-		    	<img class="img-responsive center-block" src = "images/Dar_Hori.jpg">
-		 		<p class="cent_text">CAPTION</p>
+		    	<img class="img-responsive center-block" src = "images/Dar_Hori.jpg" alt="Darrell Cheng">
 		 		<p class = "cent_text big_print"><strong>Childhood</strong></p> 
 		  		<p>In his childhood, Darrell was constantly neglected by his parents due to being the younger
 
 				child. This constant neglect during his development prompted Darrell to train intensively in order to one
 
-				day surpass his brother, Bryce. As the other half of the "Twin Dragons,"" Darrell went to the University of
+				day surpass his brother, Bryce. As the other half of the "Twin Dragons," Darrell went to the University of
 
-				Washington Academy for Young Scholars in order to gain the skills necessary to survive in the high-
-
-				stakes business environment.</p>
-				<p class = "cent_text big_print"><strong>Rise to Greatness</strong></p> 
+				Washington Academy for Young Scholars in order to gain the skills necessary to survive in the high-stakes business environment.</p>
+				<p class = "cent_text big_print"><strong>Rice to Greatness</strong></p> 
 				<p>After graduating from the University of Washing Academy for Young Scholars, Cheng
 
 				established a strong foothold in the Entertainment Business by constructing a slew of high-end night
 
-				clubs in Government-designated brownfields, lands previously considered "lost" due to excessive human
+				clubs in government-designated brownfields, lands previously considered "lost" due to excessive human
 
 				abuse. By doing so, Cheng won the Nobel Peace Prize in 2014 for the effective reclamation of
 
@@ -134,24 +154,10 @@
 				Cheng Family, Darrell co-founded the Cheng foundation with his brother, Bryce.</p>
 		 	</div>
 		</div>
-		<footer class="page-footer">
-		    <!--Footer Links-->
-		    <div class="container-fluid">
-		        <div class="row">
-		            <!--First column-->
-		            <div class="col-md-12 act_foot">
-		                <h5 class="title cent_text">Cheng Foundation</h5>
-		            </div>
-		        </div>
-		    </div>
-		    <!--/.Footer Links-->
-		    <!--Copyright-->
-		    <div class="footer-copyright">
-		        <div class="container-fluid act_foot cent_text">
-		            2015 Copyright: <a href="https://www.chengfoundation.us"> ChengFoundation.us </a>
-		        </div>
-		    </div>
-		    <!--/.Copyright-->
+		<footer class="footer">
+			<div class="container">
+				<h5 class="cent_text no_pad">Created by Pranav Sriram | The Cheng Foundation Copyright 2017: <a href="https://www.chengfoundation.us"> ChengFoundation.us </a></h5>
+			</div> 
 		</footer>
 	</body>
 	<script src = "https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
