--- a/contactus.html
+++ b/contactus.html
@@ -5,6 +5,10 @@
 			<link href="styles/main.css" rel="stylesheet">
 			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+			<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+			<link href="https://fonts.googleapis.com/css?family=Lato|PT+Serif" rel="stylesheet">
+			<link href="https://fonts.googleapis.com/css?family=Pinyon+Script" rel="stylesheet">
+			<script src="https://use.fontawesome.com/ebaf6b7b9f.js"></script>
 	</head>
 	<body>
 		<header>
@@ -34,11 +38,30 @@
 					        <li><a href="ourwork.html">Our Work</a></li>
 					        <li><a href="properties.html">Properties</a></li>
 					        <li><a href="donations.html">Donations</a></li>
-					        <li><a href="socialmedia.html">Social Media</a></li>
 					        <li><a href="testimonials.html">Testimonials</a></li>
 					      </ul>
 					      <!-- Right aligned links -->
 					      <ul class="nav navbar-nav navbar-right">
+						    <li>
+					        	<a class="btn btn-social-icon btn-facebook btn-lg" href="https://facebook.com">
+		   							<span class="fa fa-facebook"></span>
+		  						</a>
+		  					</li>
+		  					<li>
+					        	<a class="btn btn-social-icon btn-twitter btn-lg" href="https://twitter.com">
+		   							<span class="fa fa-twitter"></span>
+		  						</a>
+		  					</li>
+		  					<li>
+					        	<a class="btn btn-social-icon btn-instagram btn-lg" href="https://www.instagram.com/b_ryce_cheng/">
+		   							<span class="fa fa-instagram"></span>
+		  						</a>
+		  					</li>
+		  					<li>
+					        	<a class="btn btn-social-icon btn-google btn-lg" href="https://plus.google.com/111061049653291785131">
+		  							<span class="fa fa-google"></span>
+		  						</a>
+		  					</li>
 					        <li class="active"><a href="contactus.html">Contact Us</a></li>
 					      </ul>
 					    </div><!-- /.navbar-collapse -->
@@ -46,8 +69,8 @@
 					</nav>
 				</div>
 		</header>
-		<h1 class="cent_text imp_text">Contact the Cheng Foundation</h1>
-		<p class="cent_text fine_print">Have any questions or suggestions for the future of the Cheng Foudation. Share them with us below.<p>
+		<h1 class="imp_text cent_text pg_head"><strong>Contact Us</strong></h1>
+		<h4 class="cent_text">Have any questions or suggestions for the future of the Cheng Foudation. Share them with us below.</h4>
 		<div class="cent_text form-group col-lg-8 col-lg-offset-2">
 			<textarea class="form-control" rows="10" id="comment"></textarea>
 		</div>
@@ -55,24 +78,27 @@
 		<div class="cent_text col-lg-8 col-lg-offset-2">
 			<p><a class="btn btn-success btn-lg" href="donations.html" role="button">Submit</a></p>
 		</div>
-		<footer class="page-footer">
-		    <!--Footer Links-->
-		    <div class="container-fluid">
-		        <div class="row">
-		            <!--First column-->
-		            <div class="col-md-12 act_foot">
-		                <h5 class="title cent_text">Cheng Foundation</h5>
-		            </div>
-		        </div>
-		    </div>
-		    <!--/.Footer Links-->
-		    <!--Copyright-->
-		    <div class="footer-copyright">
-		        <div class="container-fluid act_foot cent_text">
-		            2015 Copyright: <a href="https://www.chengfoundation.us"> ChengFoundation.us </a>
-		        </div>
-		    </div>
-		    <!--/.Copyright-->
+		<div class="panel panel-default col-lg-8 col-lg-offset-2">
+			<div class="panel-heading">
+				<h3 class="panel-title cent_text">Credits / Additional Information</h3>
+			</div>
+			<div class="panel-body">
+				<!-- <img class="testimonial_img img-responsive center-block" src=images/Barry.JPG alt="Barry"> -->
+				<p class="imp_text med_print "><strong>The following people were instrumental in helping with the construction of the Cheng Foundation site:</strong></p>
+				<p class="imp_text">If you ever see them, please thank them for their service.</p>
+				<ul class="imp_text custom-bullet">
+					<li>Jason Shaw: Photos and About Us</li>
+					<li>Kevin Chen: Photos</li>
+					<li>Gowtham Manikandan: Photos</li>
+				</ul>
+				<p class="imp_text">Site was created using Bootstrap with an attempted focus on an old-school (late 2000s) aesthetic.</p>
+
+			</div>
+		</div>
+		<footer class="footer">
+			<div class="container">
+				<h5 class="cent_text no_pad">Created by Pranav Sriram | The Cheng Foundation Copyright 2017: <a href="https://www.chengfoundation.us"> ChengFoundation.us </a></h5>
+			</div> 
 		</footer>
 	</body>
 	<script src = "https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
