--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 		<link href="styles/main.css" rel="stylesheet">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+		<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Lato|PT+Serif" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Pinyon+Script" rel="stylesheet">
+		<script src="https://use.fontawesome.com/ebaf6b7b9f.js"></script>
 	</head>
 	<body>
 		<header>
@@ -34,11 +38,30 @@
 				        <li><a href="ourwork.html">Our Work</a></li>
 				        <li><a href="properties.html">Properties</a></li>
 				        <li><a href="donations.html">Donations</a></li>
-				        <li><a href="socialmedia.html">Social Media</a></li>
 				        <li><a href="testimonials.html">Testimonials</a></li>
 				      </ul>
 				      <!-- Right aligned links -->
 				      <ul class="nav navbar-nav navbar-right">
+				      	<li>
+				        	<a class="btn btn-social-icon btn-facebook btn-lg" href="https://facebook.com">
+	   							<span class="fa fa-facebook"></span>
+	  						</a>
+	  					</li>
+	  					<li>
+				        	<a class="btn btn-social-icon btn-twitter btn-lg" href="https://twitter.com">
+	   							<span class="fa fa-twitter"></span>
+	  						</a>
+	  					</li>
+	  					<li>
+				        	<a class="btn btn-social-icon btn-instagram btn-lg" href="https://www.instagram.com/b_ryce_cheng/">
+	   							<span class="fa fa-instagram"></span>
+	  						</a>
+	  					</li>
+	  					<li>
+				        	<a class="btn btn-social-icon btn-google btn-lg" href="https://plus.google.com/111061049653291785131">
+	  							<span class="fa fa-google"></span>
+	  						</a>
+	  					</li>
 				        <li><a href="contactus.html">Contact Us</a></li>
 				      </ul>
 				    </div><!-- /.navbar-collapse -->
@@ -61,26 +84,28 @@
 			    <div class="item active">
 			    <!-- <img src="images/Cheng_Building.JPG" alt="Building"> -->
 				    <div class ="slide1">
-				    	<img class="slide_image" src="images/Cheng_Building.JPG" alt="Building">
+				    	<img class="slide_image" src="images/palm_island.jpg" alt="Building">
 				    	<div class="carousel-caption">
-				      		<p><a href="ourwork.html" class="btn btn-primary btn-sm">Learn more about our vision</a></p>
+				      		<p class="fine_print read_col">The Cheng Construction Fund</p>
+				      		<p><a href="aboutus.html" class="btn btn-primary btn-sm">Learn more about our vision</a></p>
 				    	</div>
 				  	</div>
 				</div>
 			  	<div class="item">
 				  	<div class="slide2">
-				  		<img class="slide_image" src="images/Cheng_Dinner.JPG" alt="Dinner">
+				  		<img class="slide_image" src="images/Cheng_Ski_Hori.PNG" alt="Dinner">
 				  		<div class="carousel-caption">
-				    		<p>Cheng Foundation Food Aid</p>
+				    		<p class="fine_print read_col">The Cheng Foundation Mountainous Development Program</p>
+				    		<p><a href="ourwork.html" class="btn btn-primary btn-sm">Learn more about our programs</a></p>
 				  		</div>
 			  		</div>
 				</div>
 				<div class="item">
 					<div class="slide3">
-						<img class="slide_image" src="images/Cheng_Mountain.jpg" alt="Mountain">
+						<img class="slide_image" src="images/Island.jpg" alt="Mountain">
 						<div class="carousel-caption">
-							<p>A beautiful shot of the Cheng Alphine Properties, located in Coloardo</p>
-							<p><a href="properties.html" class="btn btn-primary btn-sm">Learn more about our different properties</a></p>
+							<p class="fine_print read_col">The Cheng Islandic Properties</p>
+							<p><a href="properties.html" class="btn btn-primary btn-sm">Learn more about our various properties</a></p>
 						</div>
 					</div>
 			</div>
@@ -95,40 +120,20 @@
 		</div>
 		<div class="container">
 			<div class="jumbotron gold_jumbotron">
-			 	<div class="cent_text">
-					<img src="images/cheng_logo.jpg">
-				</div>
-			 	<h1 class="imp_text">The Cheng Foundation</h1>
-			  	<p>The Cheng Foundation's lifelong mission is to use the Cheng family trusts 
+			 	<h1 class="imp_text pg_head">The Cheng Foundation</h1>
+			  	<p class="cent_text">The Cheng Foundation's lifelong mission is to use the Cheng family's resources 
 			  	to help support the less fortunate members of our local communities.
 			  	</p>
 			  	<div class = "cent_text">
-			  		<p><a class="btn btn-primary btn-lg" href="ourwork.html" role="button">Learn more about our vision</a></p>
+			  		<p><a class="btn btn-primary btn-lg" href="donations.html" role="button">Apply for a donation through the Cheng Grant Organization</a></p>
 			  	</div>
 			</div>
 		</div>
 
-
-
-
-		<footer class="page-footer">
-		    <!--Footer Links-->
-		    <div class="container-fluid">
-		        <div class="row">
-		            <!--First column-->
-		            <div class="col-md-12 act_foot">
-		                <h5 class="title cent_text">Cheng Foundation</h5>
-		            </div>
-		        </div>
-		    </div>
-		    <!--/.Footer Links-->
-		    <!--Copyright-->
-		    <div class="footer-copyright">
-		        <div class="container-fluid act_foot cent_text">
-		            2015 Copyright: <a href="https://www.chengfoundation.us"> ChengFoundation.us </a>
-		        </div>
-		    </div>
-		    <!--/.Copyright-->
+		<footer class="footer">
+			<div class="container">
+				<h5 class="cent_text no_pad">Created by Pranav Sriram | The Cheng Foundation Copyright 2017: <a href="https://www.chengfoundation.us"> ChengFoundation.us </a></h5>
+			</div> 
 		</footer>
 	</body>
 	<script src = "https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
